NIFI-14696 Fixed KinesisRecordProcessorRecord error handling